fixed text clipping error in timeline

--- a/landingpage.css
+++ b/landingpage.css
@@ -184,8 +184,8 @@
       transition: 1s ease-in-out;
       overflow: hidden;
       max-height: 0;
-      border-radius: 0 0 10% 10%;
-      margin: 0 5% 0 5%;
+      border-radius: 0 0 0% 0%;
+      margin: 0 5% 0% 5%;
   }
 
   .timelineContainer {
